--- a/style.css
+++ b/style.css
@@ -1,34 +1,48 @@
 body {
-    text-align: center;
+  box-sizing: border-box;
+  display: block;
+  height: 100%;
+  text-align: center;
+  font-family: sans-serif;
+  background: linear-gradient( 0deg, #5ef, white );
+  background-attachment: fixed;
+  margin: 0;
 }
 
 .Rules {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 ul {
-    width: auto;
-    text-align: left;
+  width: auto;
+  text-align: left;
 }
 
 #Scoreboard, #Results {
-    display: block;
-    height: 2em;
+  display: block;
+  height: 2em;
 }
 
 .Heroes {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: auto;
-    margin: 0;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  margin: 0;
+  justify-content: center;
 }
 
 .Heroes button {
-    width: 10em;
-    height: 3em;
-    margin: 0.5em 0.5em;
+  width: 10rem;
+  height: 3rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+  border: 3px solid #005;
+  border-radius: 5px;
+  background-color: #09e;
+  color: #aff;
+  text-shadow: 0 0 3px black;
+  margin: 0.5em 0.5em;
 }
